--- a/main/resources/META-INF/mods.toml
+++ b/main/resources/META-INF/mods.toml
@@ -20,13 +20,15 @@ version="${1.16.1-0.4.1-amt}" #mandatory
  # A display name for the mod
 displayName="Global Trade System" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification <here>
-updateJSONURL="http://myurl.me/" #optional
+# updateJSONURL="http://myurl.me/" #optional
 # A URL for the "homepage" for this mod, displayed in the mod UI
-displayURL="http://example.com/" #optional
+displayURL="" #optional
+# License
+license = "GNU General Public License v3.0"
 # A file name (in the root of the mod JAR) containing a logo for display
-logoFile="examplemod.png" #optional
+logoFile="" #optional
 # A text field displayed in the mod UI
-credits="Thanks for this mod goes to Java" #optional
+# credits="Thanks for this mod goes to Java" #optional
 # A text field displayed in the mod UI
 authors="aleXpansion" #optional
 # The description text for the mod (multi line!) (#mandatory)
